added new exec directives

--- a/alerts/telegraf/config/pivot/pivot.telegraf.conf
+++ b/alerts/telegraf/config/pivot/pivot.telegraf.conf
@@ -1,9 +1,43 @@
-# Add this definitions to telegraf to run external script
+
+  ## Log at debug level.
+  debug = false
+  logtarget = "file"
+  logfile = "/var/log/telegraf/telegraf.log"
+  hostname = ""
+  omit_hostname = false
+
+###############################################################################
+#                            OUTPUT PLUGINS                                   #
+###############################################################################
+
+
+# Configuration for sending metrics to InfluxDB
+[[outputs.influxdb]]
+  urls = ["http://127.0.0.1:8086"]
+
+
+###############################################################################
+#                            INPUT PLUGINS                                    #
+###############################################################################
+
 [[inputs.exec]]
-  commands = [
-	"/usr/local/bin/gc-state.sh",
-	"/usr/local/bin/pipeline-state.sh"
-  ]
+  commands = ["/usr/local/bin/shob_status.sh"]
+  interval = "600s"
+  timeout = "30s"
+  data_format = "influx"
+
+[[inputs.exec]]
+  commands = ["/usr/local/bin/pu_status.sh --stateful"]
+  interval = "60s"
+  timeout = "30s"
+  data_format = "influx"
+
+[[inputs.exec]]
+  commands = ["/usr/local/bin/gc-state.sh"]
   timeout = "5s"
   data_format = "influx"
 
+[[inputs.exec]]
+  commands = ["/usr/local/bin/pipeline-state.sh"]
+  timeout = "5s"
+  data_format = "influx"
