--- a/alerts/telegraf/config/pivot/pivot.telegraf.conf
+++ b/alerts/telegraf/config/pivot/pivot.telegraf.conf
@@ -33,7 +33,7 @@
   data_format = "influx"
 
 [[inputs.exec]]
-  commands = ["/usr/local/bin/gc-state.sh"]
+  commands = ["/usr/local/bin/space-status.sh"]
   timeout = "5s"
   data_format = "influx"
 
