--- a/data-validator/data-validator-agent/pom.xml
+++ b/data-validator/data-validator-agent/pom.xml
@@ -180,6 +180,11 @@
             <artifactId>ojdbc8</artifactId>
             <version>23.2.0.0</version>
         </dependency>
+         <dependency>
+            <groupId>com.gigaspaces</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
