--- a/data-validator/pom.xml
+++ b/data-validator/pom.xml
@@ -15,6 +15,7 @@
     </properties>
 
     <modules>
+        <module>common</module>
         <module>data-validator-server</module>
         <module>data-validator-agent</module>
     </modules>
