added di-iidr exec

--- a/alerts/telegraf/config/pivot/pivot.telegraf.conf
+++ b/alerts/telegraf/config/pivot/pivot.telegraf.conf
@@ -38,6 +38,11 @@
   data_format = "influx"
 
 [[inputs.exec]]
+  commands = ["/usr/local/bin/di_iidr_status.sh"]
+  timeout = "5s"
+  data_format = "influx"
+
+[[inputs.exec]]
   commands = ["/usr/local/bin/pipeline-state.sh"]
   timeout = "5s"
   data_format = "influx"
